# smalloc

./: .dir-locals.el  .gitignore  AI-Disclosure.md  Cargo.toml  LICENSE-MIT  LICENSE-TGPPL  README.md  bench-allocators.sh  build.rs  gather-metadata.sh  gen-ver.sh  runbench.sh  tools.sh  vmtable-l2-1MiB-1-256MiB-0.txt
.config/: nextest.toml
bench/: Cargo.toml  README.md  count-locs.sh  metadata.py  sumstats.py
bench/results/: cargo-bench.output.AppleM4Max.txt  cargo-bench.output.IntelRXeonRGold6152CPU210GHz.txt  cargo-bench.output.txt  cargo-bench.result.AMDRyzen93900X12CoreProcessor.msys..txt  cargo-bench.result.AppleM4Max.darwin25..txt  cargo-bench.result.IntelRXeonRGold6152CPU210GHz.linuxgnu..txt  count-locs.output.txt  mimalloc-bench.output.txt  mimalloc-bench.result.IntelRXeonRGold6152CPU210GHz.linuxgnu..txt  rebar.bench-allocators.result.AMDRyzen93900X12CoreProcessor.msys..txt  rebar.bench-allocators.result.AppleM4Max.darwin25..txt  rebar.bench-allocators.result.AppleM4Max.darwin25.txt  rebar.bench-allocators.result.IntelRXeonRGold6152CPU210GHz.linuxgnu..txt  rebar.bench-allocators.result.IntelRXeonRGold6152CPU210GHz.linuxgnu.txt  simd-json.bench-allocators.result.AppleM4Max.darwin25.txt  simd-json.output.IntelRXeonRGold6152CPU210GHz.linux-gnu.txt  simd-json.output.txt  simd-json.result.AMDRyzen93900X12CoreProcessor.msys..txt  simd-json.result.AppleM4Max.darwin25..txt  simd-json.result.IntelRXeonRGold6152CPU210GHz.linuxgnu..txt
bench/results/AppleM4Max.darwin25/: cargo-bench.result.txt
bench/src/: lib.rs  platform.rs
benches/: bench.rs  benches.rs  smallocb.rs
devutils/: Cargo.toml
devutils/src/: lib.rs
find_max_vm_addresses_reservable/: Cargo.toml
hellosmalloc/: Cargo.toml
plat/: Cargo.toml
plat/src/: lib.rs
simplebench/: Cargo.toml
simplebench/src/: lib.rs
smalloc/: Cargo.toml  build.rs
smalloc-ffi/: Cargo.toml  README.md  build.rs
smalloc-ffi-c-api/: Cargo.toml  interpose.c
smalloc-ffi-windows-heap-api/: Cargo.toml  README.md  build.rs  export_extractor.py
smalloc-ffi-windows-heap-api/src/: lib.rs
smalloc-ffi/src/: lib.rs
smalloc-macros/: Cargo.toml
smalloc-macros/src/: lib.rs
smalloc/src/: lib.rs  tests.rs
smalloc/src/i/: plat.rs
smalloc/src/plat/: mod.rs
smalloc/tests/: integration.rs
src/: cpu.rs  cpuid.rs  experiments.rs  gensizeclasses.py  lib.rs  main.rs  platformalloc.rs  smallocb_allocator_config_globalalloc.rs  smallocb_allocator_config_smalloc.rs
