cargo-features = ["profile-rustflags"]

[workspace]
members = ["smalloc", "smalloc-ffi", "hellosmalloc", "bench", "find_max_vm_addresses_reservable"]
default-members = ["smalloc"]
resolver = "3"

[workspace.package]
version = "7.4.2"
edition = "2024"
authors = ["Zooko <noemail@thanks.com>"]
license = "MIT OR Apache-2.0 OR TGPPL-1.0 OR BOSL-1.0"
description = "smalloc is a very simple but performant allocator"
repository = "https://github.com/zooko/smalloc"

[profile.release]
opt-level = 3
panic = "abort"
debug = false
codegen-units = 1
lto = "fat"
debug-assertions = false
overflow-checks = false
rustflags = ["-C", "target-cpu=native"]

[profile.profiling]
inherits = "release"
debug = true           # Enable debug symbols for profiling
# lto = false           # Disable LTO for faster builds and better symbol info
