# This is an unstable feature. Leaving it commented-out in case someone wants to use it in their
# local build that uses nightly, or in case we can start using it again in the glorious future when
# Rust stable supports it.
# cargo-features = ["profile-rustflags"]

[workspace]
members = ["smalloc", "smalloc-ffi", "hellosmalloc", "bench", "find_max_vm_addresses_reservable"]
default-members = ["smalloc"]
resolver = "3"

[workspace.package]
version = "7.6.1"
edition = "2024"
authors = ["Zooko <noemail@thanks.com>"]
license = "MIT OR Apache-2.0 OR TGPPL-1.0" # OR BOSL-1.0, see LICENSE-BOSL.txt
description = "smalloc is a very simple but performant allocator"
repository = "https://github.com/zooko/smalloc"
homepage = "https://github.com/zooko/smalloc"
readme = "README.md"
keywords = ["allocator", "memory", "malloc"]
categories = ["memory-management"]

[profile.release]
opt-level = 3
panic = "abort"
debug = false
codegen-units = 1
lto = "fat"
debug-assertions = false
overflow-checks = false

# See comment above about profile-rustflags
# rustflags = ["-C", "target-cpu=native"]

[profile.profiling]
inherits = "release"
debug = 2
opt-level = 2
lto = "thin"
codegen-units = 16

# See comment above about profile-rustflags
# rustflags = ["-C", "force-frame-pointers=yes", "-C", "target-cpu=native"]

