[workspace]
members = ["smalloc", "smalloc-ffi", "hellosmalloc", "bench", "find_max_vm_addresses_reservable"]
default-members = ["smalloc"]
resolver = "3"

[workspace.package]
version = "7.6.9+b140dc6f0bfa37c175e5e7b315e8c59e1712808b"
edition = "2024"
authors = ["Zooko <noemail@thanks.com>"]
license = "MIT OR Apache-2.0 OR TGPPL-1.0" # OR BOSL-1.0, see LICENSE-BOSL.txt
description = "smalloc is a simple, fast allocator"
repository = "https://github.com/zooko/smalloc"
homepage = "https://github.com/zooko/smalloc"
readme = "README.md"
keywords = ["allocator", "memory", "malloc"]
categories = ["memory-management"]

[profile.release]
opt-level = 3
panic = "abort"
debug = false
codegen-units = 1
lto = "fat"
debug-assertions = false
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = 2
opt-level = 2
lto = "thin"
codegen-units = 16
