[package]
name = "bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
smalloc = { path = "../smalloc", package = "smmalloc" }
devutils = { path = "../devutils" }
thousands = "0.2"

# For benchmarking other allocators:
mimalloc = { version = "*", features = ["v3"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
snmalloc-rs = { version = "0.3", features = ["build_cc"], optional = true }
rpmalloc = { version = "0.2", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Performance"] }

[target.'cfg(not(target_os="windows"))'.dependencies]
libc = "0.2"

[[bin]]
name = "bench"

[features]

# For benchmarking other allocators:
mimalloc = ["dep:mimalloc"] 
jemalloc = ["dep:tikv-jemallocator"]
snmalloc = ["dep:snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
