[package]
name = "find_max_vm_addresses_reservable"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
thousands = "0.2.0"

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Memory"] }

[target.'cfg(target_vendor="apple")'.dependencies]
mach-sys = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.0.7", features = ["mm"] }

[[bin]]
name = "find_max_vm_addresses_reservable"
